[package]
name = "axeman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
toy-arms = { git = "https://github.com/pseuxide/toy-arms" }
lazy_static = "1.4.0"
anyhow = "1.0.79"
winsafe = { version = "0.0.20", features = ["kernel"] }
once_cell = "1.19.0"
thread_local = "1.1.8"
async-trait = "0.1.77"
colored = "2.1.0"
steamworks = "0.11.0"
ansi_term = "0.12.1"
time = "0.3.36"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "serde"
]